<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="4dp"
        android:text="@string/header"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/radio_flag_cancel_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/flag_cancel_current" />

        <RadioButton
            android:id="@+id/radio_flag_immutable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/flag_immutable" />

        <RadioButton
            android:id="@+id/radio_flag_no_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/flag_no_create" />

        <RadioButton
            android:id="@+id/radio_flag_one_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/flag_one_shot" />

        <RadioButton
            android:id="@+id/radio_flag_update_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/flag_update_current" />

    </RadioGroup>


    <EditText
        android:id="@+id/time"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:background="@color/btnColor"
        android:onClick="startAlert"
        android:padding="6dp"
        android:text="@string/start_counter" />

</LinearLayout>